--- a/droneme_frontend/src/App.css
+++ b/droneme_frontend/src/App.css
@@ -1038,18 +1038,6 @@ ul.footer-list a:hover {
   font-weight: bold;
 }
 
-.card {
-  box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.4s;
-  width: 30%;
-  height: 500px;
-  margin-top: 20px;
-  margin-left: 30px;
-  margin-right: 30px;
-  margin-bottom: 15px;
-  cursor: pointer;
-}
-
 .card:hover {
   box-shadow: 0 8px 16px 0 #21272C;
 }
@@ -1068,6 +1056,15 @@ ul.footer-list a:hover {
 
 .container {
   padding: 2px 16px;
+}
+
+.productList{
+  justify-content:center;
+  display: grid;
+  grid-template-columns: repeat(4,275px);
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
+  margin: 20px 0;
 }
 
 /* --------------------------------------- PRODUCTS PAGE END ------------------------------------------------- */
@@ -1107,7 +1104,7 @@ ul.footer-list a:hover {
   width: 70px;
   overflow: hidden;
   margin-top: 200px;
-  height: 100%;
+  min-height: 100% !important;
 }
 
 .side-left .menus .item-menu {
