--- a/droneme_frontend/src/App.css
+++ b/droneme_frontend/src/App.css
@@ -128,6 +128,15 @@ input:checked + .slider:before {
   border-radius: 50%;
 }
 
+.pagination {
+  justify-content: center;
+}
+
+.page-link {
+  color: #2DA100;
+  background-color: #2DA100;
+}
+
 /* --------------------------------------- GLOBAL STYLE END -------------------------------------------------- */
 
 /* --------------------------------------- COMPONENT HEADER START -------------------------------------------- */
